tests/rosetta/out/C/biorhythms.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:54Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:54Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static double PI = 3.141592653589793;
static double TWO_PI = 6.283185307179586;

double sinApprox(double x) {
  double term = x;
  double sum = x;
  int n = 1;
  while (n <= 8) {
    double denom = (double)(((2 * n) * (2 * n + 1)));
    term = (-term) * x * x / denom;
    sum = sum + term;
    n = n + 1;
  }
  return sum;
}

double floor(double x) {
  int i = (int)(x);
  if (((double)(i)) > x) {
    i = i - 1;
  }
  return (double)(i);
}

double absFloat(double x) {
  if (x < 0.0) {
    return (-x);
  }
  return x;
}

int absInt(int n) {
  if (n < 0) {
    return (-n);
  }
  return n;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp1 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp1 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int tmp2 = map_string_int_create(10);
  map_string_int_put(&tmp2, "0", 0);
  map_string_int_put(&tmp2, "1", 1);
  map_string_int_put(&tmp2, "2", 2);
  map_string_int_put(&tmp2, "3", 3);
  map_string_int_put(&tmp2, "4", 4);
  map_string_int_put(&tmp2, "5", 5);
  map_string_int_put(&tmp2, "6", 6);
  map_string_int_put(&tmp2, "7", 7);
  map_string_int_put(&tmp2, "8", 8);
  map_string_int_put(&tmp2, "9", 9);
  map_string_int digits = tmp2;
  while ((i < str.len)) {
    char *tmp3 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp3);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

list_int parseDate(char *s) {
  char *tmp4 = slice_string(s, 0, 4);
  int y = parseIntStr(tmp4);
  char *tmp5 = slice_string(s, 5, 7);
  int m = parseIntStr(tmp5);
  char *tmp6 = slice_string(s, 8, 10);
  int d = parseIntStr(tmp6);
  list_int tmp7 = list_int_create(3);
  tmp7.data[0] = y;
  tmp7.data[1] = m;
  tmp7.data[2] = d;
  return tmp7;
}

int leap(int y) {
  if (y % 400 == 0) {
    return 1;
  }
  if (y % 100 == 0) {
    return 0;
  }
  return y % 4 == 0;
}

int daysInMonth(int y, int m) {
  int feb = (leap(y) ? 29 : 28);
  list_int lengths = list_int_create(12);
  lengths.data[0] = 31;
  lengths.data[1] = feb;
  lengths.data[2] = 31;
  lengths.data[3] = 30;
  lengths.data[4] = 31;
  lengths.data[5] = 30;
  lengths.data[6] = 31;
  lengths.data[7] = 31;
  lengths.data[8] = 30;
  lengths.data[9] = 31;
  lengths.data[10] = 30;
  lengths.data[11] = 31;
  return lengths.data[m - 1];
}

list_int addDays(int y, int m, int d, int n) {
  int yy = y;
  int mm = m;
  int dd = d;
  if (n >= 0) {
    int i = 0;
    while (i < n) {
      dd = dd + 1;
      if (dd > daysInMonth(yy, mm)) {
        dd = 1;
        mm = mm + 1;
        if (mm > 12) {
          mm = 1;
          yy = yy + 1;
        }
      }
      i = i + 1;
    }
  } else {
    int i = 0;
    while (i > n) {
      dd = dd - 1;
      if (dd < 1) {
        mm = mm - 1;
        if (mm < 1) {
          mm = 12;
          yy = yy - 1;
        }
        dd = daysInMonth(yy, mm);
      }
      i = i - 1;
    }
  }
  list_int tmp8 = list_int_create(3);
  tmp8.data[0] = yy;
  tmp8.data[1] = mm;
  tmp8.data[2] = dd;
  return tmp8;
}

char *pad2(int n) {
  if (n < 10) {
    char *tmp9 = _str(n);
    char *tmp10 = concat_string("0", tmp9);
    return tmp10;
  }
  char *tmp11 = _str(n);
  return tmp11;
}

char *dateString(int y, int m, int d) {
  char *tmp12 = _str(y);
  char *tmp13 = concat_string(tmp12, "-");
  return tmp13 + pad2(m) + "-" + pad2(d);
}

int day(int y, int m, int d) {
  int part1 = 367 * y;
  int part2 = (int)(((7 * ((int)((y + ((m + 9) / 12))))) / 4));
  int part3 = (int)(((275 * m) / 9));
  return part1 - part2 + part3 + d - 730530;
}

int biorhythms(char *birth, char *target) {
  list_int bparts = parseDate(birth);
  int by = bparts.data[0];
  int bm = bparts.data[1];
  int bd = bparts.data[2];
  list_int tparts = parseDate(target);
  int ty = tparts.data[0];
  int tm = tparts.data[1];
  int td = tparts.data[2];
  int diff = absInt(day(ty, tm, td) - day(by, bm, bd));
  char *tmp14 = concat_string("Born ", birth);
  char *tmp15 = concat_string(tmp14, ", Target ");
  char *tmp16 = concat_string(tmp15, target);
  printf("%s\n", tmp16);
  char *tmp17 = _str(diff);
  char *tmp18 = concat_string("Day ", tmp17);
  printf("%s\n", tmp18);
  list_string cycles = list_string_create(3);
  cycles.data[0] = "Physical day ";
  cycles.data[1] = "Emotional day";
  cycles.data[2] = "Mental day   ";
  list_int lengths = list_int_create(3);
  lengths.data[0] = 23;
  lengths.data[1] = 28;
  lengths.data[2] = 33;
  list_string tmp19 = list_string_create(2);
  tmp19.data[0] = "up and rising";
  tmp19.data[1] = "peak";
  list_string tmp20 = list_string_create(2);
  tmp20.data[0] = "up but falling";
  tmp20.data[1] = "transition";
  list_string tmp21 = list_string_create(2);
  tmp21.data[0] = "down and falling";
  tmp21.data[1] = "valley";
  list_string tmp22 = list_string_create(2);
  tmp22.data[0] = "down but rising";
  tmp22.data[1] = "transition";
  list_int quadrants_data[] = {tmp19, tmp20, tmp21, tmp22};
  list_list_int quadrants = {4, quadrants_data};
  int i = 0;
  while (i < 3) {
    int length = lengths.data[i];
    int cycle = cycles.data[i];
    int position = diff % length;
    int quadrant = (position * 4) / length;
    double percent =
        sinApprox(2.0 * PI * ((double)(position)) / ((double)(length)));
    percent = floor(percent * 1000.0) / 10.0;
    char *description = "";
    if (percent > 95.0) {
      description = " peak";
    } else if (percent < ((-95.0))) {
      description = " valley";
    } else if (absFloat(percent) < 5.0) {
      description = " critical transition";
    } else {
      int daysToAdd = (quadrant + 1) * length / 4 - position;
      list_int res = addDays(ty, tm, td, daysToAdd);
      int ny = res.data[0];
      int nm = res.data[1];
      int nd = res.data[2];
      char *transition = dateString(ny, nm, nd);
      char *trend = quadrants.data[quadrant].data[0];
      char *next = quadrants.data[quadrant].data[1];
      char *tmp23 = _str(percent);
      char *pct = tmp23;
      if ((!contains(pct, "."))) {
        char *tmp24 = concat_string(pct, ".0");
        pct = tmp24;
      }
      char *tmp25 = concat_string(" ", pct);
      char *tmp26 = concat_string(tmp25, "% (");
      char *tmp27 = concat_string(tmp26, trend);
      char *tmp28 = concat_string(tmp27, ", next ");
      char *tmp29 = concat_string(tmp28, next);
      char *tmp30 = concat_string(tmp29, " ");
      char *tmp31 = concat_string(tmp30, transition);
      char *tmp32 = concat_string(tmp31, ")");
      description = tmp32;
    }
    char *tmp33 = _str(position);
    char *posStr = tmp33;
    if ((position < 10)) {
      char *tmp34 = concat_string(" ", posStr);
      posStr = tmp34;
    }
    printf("%d\n", cycle + posStr + " : " + description);
    i = i + 1;
  }
  printf("\n");
}

int mochi_main() {
  list_string tmp35 = list_string_create(2);
  tmp35.data[0] = "1943-03-09";
  tmp35.data[1] = "1972-07-11";
  list_string tmp36 = list_string_create(2);
  tmp36.data[0] = "1809-01-12";
  tmp36.data[1] = "1863-11-19";
  list_string tmp37 = list_string_create(2);
  tmp37.data[0] = "1809-02-12";
  tmp37.data[1] = "1863-11-19";
  list_int pairs_data[] = {tmp35, tmp36, tmp37};
  list_list_int pairs = {3, pairs_data};
  int idx = 0;
  while (idx < pairs.len) {
    list_string p = pairs.data[idx];
    biorhythms(p.data[0], p.data[1]);
    idx = idx + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
